@@ -1,3 +1,9 @@
+1998-12-12  Tsukamoto Tetsuo  <czkmt@remus.dti.ne.jp>
+
+	* lisp/gnus-offline.el (gnus-offline-define-menu-on-miee): Bug
+	fix.
+	(gnus-offline-set-offline-sendmail-function): Bug fix.
+	
 1998-12-11  Tatsuya Ichikawa  <t-ichi@po.shiojiri.ne.jp>
 
 	* lisp/gnus-offline.el (gnus-offline-define-menu-on-miee): Change 
